# RFAnalyzer

./: .gitignore  .travis.yml  404.html  RFAnalyzer.apk  Readme.md  about.html  advanced.html  build.gradle  build.gradle.kts  changelog.txt  demodulation.html  fft.html  gradle.properties  gradlew  index.html  mkdocs.yml  quickstart.html  recording.html  sdr-source.html  settings.gradle  settings.gradle.kts  settings.html  setup.html  troubleshooting.html  ui-overview.html
.github/workflows/: deploy-docs.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/lib/: hackrf_android.aar
doc/: HiQSDR.txt  RF Analyzer class diagram.pptx  playstore description.txt  rf_analyzer_manual.md  rf_analyzer_manual.mk
docs/: about.md  advanced.md  demodulation.md  fft.md  index.md  quickstart.md  recording.md  sdr-source.md  settings.md  setup.md  troubleshooting.md  ui-overview.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hackrf_android/: build.gradle  hackrf_android.aar
libairspy/: build.gradle.kts
libhydrasdr/: build.gradle.kts
libhydrasdr/src/main/cpp/: CMakeLists.txt  hydrasdr_device_native.cpp
libhydrasdr/src/main/cpp/libhydrasdr/: LICENSE.md  filters.h  hydrasdr.c  hydrasdr.h  hydrasdr_commands.h  iqconverter_float.c  iqconverter_float.h  iqconverter_int16.c  iqconverter_int16.h
libusb/: build.gradle.kts
libusb/src/main/cpp/: CMakeLists.txt
nativedsp/: build.gradle.kts
resources/: playstore description.txt
resources/graphics/: tutorial_connect_sdr.xcf  (+4 more)
search/: search_index.json
tools/: prepWAV.py  server.py
(+272 files in other folders)
